Try to fix links in dark mode

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -283,6 +283,10 @@ ul.contact-options li a {
     color: $text-light;
   }
 
+  a {
+    color: $text-light;
+    }
+
   .project a {
     color: $text-light;
   }
